--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ body {
     font-size: large;
     font-weight: 700;
     text-shadow:1px 2px 4px #5f2e1d;
-
 }
 
 .buttons {
@@ -52,6 +51,7 @@ button {
     background-color:#006D77;
     text-shadow:0px 1px 0px #1e534e;
 }
+
 button:hover {
     background-color:#83C5BE;
 }
@@ -59,5 +59,9 @@ button:active {
     position:relative;
     top:1px;
 }
-    
+
+.operator {
+    border:1px solid #637074;
+    background-color: #637074;
+}
 
